- Adding service code to route, more api endpoints
